<resources>
    <string name="app_name">OpenCVFaceRecognition</string>
    <string name="action_settings">Settings</string>
    <string name="app_excluir">Excluir</string>
    <string name="app_person_name">Name</string>
    <string name="app_salvar">Salvar</string>
    <string name="app_person_email">E-mail</string>
    <string name="app_person_phone">Phone</string>
    <string name="app_person_address">Address</string>
    <string name="app_haarcascade_frontalface_alt2">haarcascade_frontalface_alt2.xml</string>
    <string name="app_haarcascade_eye_tree_eyeglasses">haarcascade_eye_tree_eyeglasses.xml</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_ok">OK</string>
    <string name="app_face_recognition">Reconhecer</string>
    <string name="app_cancela">Cancela</string>
</resources>
